test/seq/cmdlists/invalid_ttl_t3.err
SyntaxError: Time too short (min 30ns)
Line: 3
ttl(2)=true t=0.01us
              ~~~~~~
